kustomize/meta-webhook/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meta-webhook
  labels:
    app: meta-webhook
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meta-webhook
  template:
    metadata:
      labels:
        app: meta-webhook
    spec:
      containers:
      - name: meta-webhook
        image: rg.nl-ams.scw.cloud/uplink/meta-webhook:main
      imagePullSecrets:
      - name: ams-docker-registry-credentials
